--- a/index.html
+++ b/index.html
@@ -45,12 +45,35 @@
           <ul class="list wrap">
             <li class="wrap-item">
               <a
+                href=""
+                class="link contacts header-link header-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="header-icon" width="16" height="10">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+              </a>
+
+              <a
                 class="link contacts header-link"
                 href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
+
             <li class="wrap-item">
+              <a
+                href=""
+                class="link contacts header-link header-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="header-icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+              </a>
+
               <a class="link contacts header-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
@@ -79,7 +102,7 @@
             <li class="benifits-item">
               <button class="button-icon">
                 <svg width="70" height="70">
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </button>
 
@@ -92,7 +115,7 @@
             <li class="benifits-item icon-clock">
               <button class="button-icon">
                 <svg width="70" height="70">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </button>
 
@@ -105,7 +128,7 @@
             <li class="benifits-item icon-diagram">
               <button class="button-icon">
                 <svg width="70" height="70">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </button>
 
@@ -118,7 +141,7 @@
             <li class="benifits-item icon-astronaut">
               <button class="button-icon">
                 <svg width="70" height="70">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </button>
 
@@ -186,6 +209,57 @@
               <div class="team-wrap">
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
+
+                <ul class="list social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -201,6 +275,57 @@
               <div class="team-wrap">
                 <h3 class="team-title">Ольга Репина</h3>
                 <p class="team-text">Frontend Developer</p>
+
+                <ul class="list social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -216,6 +341,57 @@
               <div class="team-wrap">
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p class="team-text">Marketing</p>
+
+                <ul class="list social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -231,7 +407,138 @@
               <div class="team-wrap">
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p class="team-text list">UI Designer</p>
+
+                <ul class="list social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icon-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section our-clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list clients">
+            <li class="clients-item">
+              <a
+                href=""
+                class="clients-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="clients-icon" width="44" height="49">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                href=""
+                class="clients-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="clients-icon" width="40" height="52">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                href=""
+                class="clients-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="clients-icon" width="41" height="43">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                href=""
+                class="clients-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="clients-icon" width="80" height="42">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                href=""
+                class="clients-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="clients-icon" width="59" height="47">
+                  <use href="./images/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                href=""
+                class="clients-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="clients-icon" width="89" height="45">
+                  <use href="./images/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -240,27 +547,84 @@
 
     <!--Подвал-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="/">
-          <span class="web">Web</span><span class="studio">Studio</span></a
-        >
-        <ul class="list">
-          <li>
-            <a class="link contacts-footer" href="">
-              <address>г. Киев, пр-т Леси Украинки, 26</address></a
-            >
-          </li>
-          <li class="mail">
-            <a class="link contacts-footer" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contacts-footer" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+      <div class="container container-footer">
+        <div class="footer-contacts-all">
+          <a class="logo-footer" href="/">
+            <span class="web">Web</span><span class="studio">Studio</span></a
+          >
+          <ul class="list">
+            <li>
+              <a class="link contacts-footer" href="">
+                <address>г. Киев, пр-т Леси Украинки, 26</address></a
+              >
+            </li>
+            <li class="mail">
+              <a class="link contacts-footer" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link contacts-footer" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-social-link">
+          <p class="join-us">присоединяйтесь</p>
+
+          <ul class="list social-icons">
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
