--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,35 @@
           <ul class="list wrap">
             <li class="wrap-item">
               <a
+                href=""
+                class="link contacts header-link header-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="header-icon" width="16" height="10">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+              </a>
+
+              <a
                 class="link contacts header-link"
                 href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
+
             <li class="wrap-item">
+              <a
+                href=""
+                class="link contacts header-link header-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="header-icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+              </a>
+
               <a class="link contacts header-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
@@ -196,27 +219,84 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="/">
-          <span class="web">Web</span><span class="studio">Studio</span></a
-        >
-        <ul class="list">
-          <li>
-            <a class="link contacts-footer" href="">
-              <address>г. Киев, пр-т Леси Украинки, 26</address></a
-            >
-          </li>
-          <li class="mail">
-            <a class="link contacts-footer" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contacts-footer" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+      <div class="container container-footer">
+        <div class="footer-contacts-all">
+          <a class="logo-footer" href="/">
+            <span class="web">Web</span><span class="studio">Studio</span></a
+          >
+          <ul class="list">
+            <li>
+              <a class="link contacts-footer" href="">
+                <address>г. Киев, пр-т Леси Украинки, 26</address></a
+              >
+            </li>
+            <li class="mail">
+              <a class="link contacts-footer" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link contacts-footer" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-social-link">
+          <p class="join-us">присоединяйтесь</p>
+
+          <ul class="list social-icons">
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icon-link footer-social-icon-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
